--- a/res/layout/activity_blur.xml
+++ b/res/layout/activity_blur.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:demo="http://schemas.android.com/apk/res/com.koalcat.blurdemo"
     android:layout_width="match_parent"
     android:layout_height="match_parent" 
     android:background="@null" >
@@ -8,11 +9,14 @@
         android:id="@+id/list"
         android:layout_width="match_parent"
     	android:layout_height="match_parent"
+    	demo:blur_bottom_height="48dip"
+    	demo:blur_top_height="25dip"
+    	demo:blur_enable="true"
         />
     
     <LinearLayout 
         android:layout_width="match_parent"
-        android:layout_height="65dip"
+        android:layout_height="48dip"
         android:layout_alignParentBottom="true"
         android:background="@null"
         >
@@ -21,25 +25,25 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="text1"
+            android:text=""
             android:background="@drawable/bottom"/>
 		<Button 
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="text2"
+            android:text=""
             android:background="@drawable/bottom"/>
 		<Button 
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="text3"
+            android:text=""
             android:background="@drawable/bottom"/>
 		<Button 
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="text4"
+            android:text=""
             android:background="@drawable/bottom"/>
         
     </LinearLayout>
