--- a/res/layout/activity_blur.xml
+++ b/res/layout/activity_blur.xml
@@ -13,7 +13,7 @@
     	demo:blur_top_height="25dip"
     	demo:blur_enable="true"
         />
-    
+    <!-- demo:blur_bottom_height="48dip" -->
     <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="48dip"
